...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/OrganizerCreateEventImage"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@drawable/poster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <Button
                        android:id="@+id/OrganizerCreateEventUploadPosterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:backgroundTint="@color/accent_first"
                        android:text="Upload Event Image"
                        android:textSize="@dimen/font_text_size"
...
                        android:textColor="@color/lightText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <EditText
                        android:id="@+id/OrganizerCreateEventEventTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Event Name"
                        android:inputType="textCapWords"
                        android:textColor="@color/lightTextSemi"
...
                        android:textSize="@dimen/font_heading_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/OrganizerCreateEventDetailsLabel"/>

                    <EditText
                        android:id="@+id/OrganizerCreateEventDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="Event Description"
                        android:inputType="textMultiLine"
                        android:textColor="@color/lightTextSemi"
                        android:textColorHint="@color/lightTextSemi"
...
                        android:textColor="@color/lightText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <EditText
                        android:id="@+id/OrganizerCreateEventEventLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Event Location"
                        android:inputType="textCapWords"
                        android:textColor="@color/lightTextSemi"
                        android:textColorHint="@color/lightTextSemi"
                        android:textSize="@dimen/font_subheading_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/OrganizerCreateEventGeolocationSwitch"
                        app:layout_constraintTop_toBottomOf="@id/OrganizerCreateEventLocationLabel"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/OrganizerCreateEventGeolocationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:textColor="@color/lightText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <EditText
                        android:id="@+id/OrganizerCreateEventLimitWaitingListLimit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Enter Limit of the Waiting List"
                        android:inputType="numberDecimal"
                        android:textColor="@color/lightTextSemi"
...
                        android:textSize="@dimen/font_subheading_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/OrganizerCreateEventSettingsLabel"/>

                    <Spinner
                        android:id="@+id/OrganizerCreateEventCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@color/accent_first"
                        android:popupBackground="@color/accent_first"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/OrganizerCreateEventLimitWaitingListLimit"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/OrganizerCreateEventPrivateSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:thumbTint="@color/switch_thumb_selector"
                        app:trackTint="@color/switch_track_selector"
                        app:layout_constraintEnd_toEndOf="parent"
...
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Create Event Button -->
            <Button
                android:id="@+id/OrganizerCreateEventCreateEvent"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:text="Create Event"
                android:textSize="@dimen/font_text_size"
                android:backgroundTint="@color/accent_first"
...
